--- a/main_file.bib
+++ b/main_file.bib
@@ -240,6 +240,24 @@ keywords = "integer programming",
 keywords = "Lagrange multipliers"
 }
 
+@article{FT,
+title = "A priority-rule method for project scheduling with work-content constraints ",
+journal = "European Journal of Operational Research ",
+volume = "203",
+number = "3",
+pages = "568 - 574",
+year = "2010",
+note = "",
+issn = "0377-2217",
+doi = "http://dx.doi.org/10.1016/j.ejor.2009.09.019",
+url = "http://www.sciencedirect.com/science/article/pii/S0377221709006341",
+author = "C.-U. Fündeling and N. Trautmann",
+keywords = "Project scheduling",
+keywords = "Variable resource usage",
+keywords = "Work content",
+keywords = "Priority-rule method "
+}
+
 @Article{BD,
 author="Baptiste, Philippe
 and Demassey, Sophie",
