--- a/part1/chap1.tex
+++ b/part1/chap1.tex
@@ -1,7 +1,25 @@
-
-\part{Introduction}
+\cleardoublepage
+\begin{minipage}{0.95\linewidth}
+  \part{Introduction}
+  \vspace{15mm} % l'espacement souhaité
+  \parttoc 
+\end{minipage}
 
 \chapter{Ordonnancement, ressource et énergie}
+
+Dans ce chapitre, nous commençons par définir ce qu'est un problème
+d'ordonnacement et quelles sont les principales caractéristiques de
+ces problèmes. Ensuite, nous présenterons deux exemples de problèmes
+d'ordonnacement cumulatifs que nous utiliserons tout au long de ce
+manuscrit, le problème d'ordonnacment de projet à contraintes de
+ressources (RCPSP) et le problème cumulatif (CuSP). Nous montrerons
+ensuite les limites de ces problèmes et nous introduirons une nouvelle 
+extension du CuSP, le problème d'ordonnacement continu à contraintes
+énergétiques (CECSP), pour pallier ces limites. Cette nouvelle
+extension sera ensuite comparée aux extensions existantes du \RCPSP~
+et du \CUSP.  Enfin, plusieurs propriétés du \CECSP, qui seront
+utilisées tout au long du manuscrit, seront présentées.
+
 
 \input{part1/ordo.tex}
 \input{part1/ordo_ressource.tex}
