--- a/part1/ordo_nrj.tex
+++ b/part1/ordo_nrj.tex
@@ -1,19 +1,6 @@
 
 \section{L'ordonnancement sous contraintes énergétiques}
-Dans le \RCPSP~et dans le \CUSP, il est supposé qu'une activité
-consomme une quantité fixe de ressource durant toute son exécution et
-que cette activité a une durée fixe. Cependant, il arrive qu'en
-pratique, ce ne soit pas la cas. Un exemple venant d'un problème
-industriel est présenté dans~\cite{HaitArtiguesLopez}. Dans cet
-article, une application dans une fonderie où du métal est fondu dans
-des fournaises à induction est détaillé. La puissance de chaque
-fournaise utilisée pour faire fondre le métal peut être réglée, à tout
-moment, afin d'éviter un dépassement d'un certain niveau d'énergie
-(généralement dû à une limite suggérée par le fournisseur
-d'énergie). De ce fait, si chaque opération de fonte est vue comme une
-activité, nous avons besoin de pouvoir moduler la quantité d'énergie
-donnée à cette activité à chaque instant et la durée de l'activité dépend de cette 
-quantité d'énergie. La modélisation de ce problème repose sur le problème 
+ La modélisation de ce problème repose sur le problème 
 d'ordonnancement continu à contraintes énergétiques~\cite{ArtiguesLopez}, le
 \CECSP. 
 
