--- a/part2/CuSP/PPC_CuSP.tex
+++ b/part2/CuSP/PPC_CuSP.tex
@@ -1,2 +1,4 @@
-\chapter{La contrainte cumulative}
+\chapter[L'ordonnancement cumulatif en PPC]{L'ordonnancement cumulatif en programmation par contraintes}
 
+ \input{part2/CuSP/PPC.tex}
+ \input{part2/CuSP/cumulative.tex}
