--- a/part3/CECSP/PLNE_CECSP.tex
+++ b/part3/CECSP/PLNE_CECSP.tex
@@ -1,4 +1,4 @@
-\chapter{Programmtion linéaire pour le \CECSP~et renforcement des modèles}
+\chapter[Modèles pour le \CECSP~et renforcement des modèles]{Programmtion linéaire pour le \CECSP~et renforcement des modèles}
 
 
 
