--- a/part3/PLNE.tex
+++ b/part3/PLNE.tex
@@ -4,7 +4,7 @@
 
 %!TeX root =../main_file.tex 
 
-\newpage
+\cleardoublepage
 \begin{minipage}{0.95\linewidth}
 \part{Programmation linéaire en nombres entiers}
 \vspace{15mm} % l'espacement souhaité
