--- a/part3/RCPSP/modele_RCPSP.tex
+++ b/part3/RCPSP/modele_RCPSP.tex
@@ -1,5 +1,5 @@
 %!TeX root =../main_file.tex 
-\section{Application à l'ordonnancement de projet sous contraintes de
+\section[Application au RCPSP]{Application à l'ordonnancement de projet sous contraintes de
   ressource}   
 \label{sec:PLNE_ordo_res}
 
