--- a/usepackage.tex
+++ b/usepackage.tex
@@ -5,6 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
+\usepackage[utf8]{inputenc}
 \usepackage{xcolor}
 \usepackage{amsmath}
 \usepackage{amssymb}
