--- a/part1/ordo_ressource.tex
+++ b/part1/ordo_ressource.tex
@@ -1,11 +1,18 @@
 
-\section{Contraintes de ressource et contraintes }
+\subsection{Contraintes de ressources}
 
-Dans ce manuscrit, nous sommes principalement intéressé aux problèmes
-d'ordonnancement cumulatifs. Parmi ces derni
+Dans ce manuscrit, nous nous intéressons  principalement  aux problèmes
+d'ordonnancement cumulatifs. Parmi ces derniers, deux des plus
+étudiés sont le problème d'ordonnancement de projet à contraintes de
+ressource (RCPSP) et le problème cumulatif (CuSP). Nous allons donc
+commencer par présenter ces deux problèmes. En effet, beaucoup des
+travaux décrits dans ce manuscrit s'appuient sur des résultats mis en
+place pour l'un d'entre eux. Dans un second temps, nous montrerons les
+limites de ces problèmes et les solutions mises en place dans la
+littérature pour palier ces limitations. 
 
-\subsection{Problèmes cumulatifs}
-\subsubsection{Le problème d'ordonnancement  de projet à contraintes de
+\subsubsection{Problèmes cumulatifs}
+\paragraph{Le problème d'ordonnancement  de projet à contraintes de
   ressources}
 \index{\RCPSPidx}
 Le problème d'ordonnancement de projet à contraintes de ressources
@@ -58,7 +65,7 @@ de chaque activité $i\in \A$ de telle sorte que:
         [st_i,st_i+p_i]}} r_{ik} \le R_k\end{equation} 
   avec $\H=\{0,\dots,T\}$ défini l'horizon de temps du projet, où $T$
   est une borne supérieure sur la date de fin du projet.
-\item les contraintes de précédences sont satisfaites, i.e. 
+\item les contraintes de précédence sont satisfaites, i.e. 
   \begin{equation} \forall (i,j) \in E,\ s_i+p_i \le p_j \end{equation}
 \item la date de fin du projet $C_{max}= \max_{i \in \A} s_i+p_i$
   soit minimale. 
@@ -227,7 +234,7 @@ résolution. Dans la section~\ref{sec:PLNE_ordo_res}, nous présentons des
 modèles de programmation linéaire permettant de trouver la solution
 optimale à ce problème. 
 
-\subsubsection{Le problème cumulatif}
+\paragraph{Le problème cumulatif}
 
 En ordonnancement avec contraintes de ressources, on distingue deux
 types de ressources:
@@ -360,6 +367,42 @@ suite du manuscrit.
   \end{figure}
 \end{ex}
 
-Dans la section~\ref{sec:etat_CUSP}, nous présenterons des
+Dans la section~\ref{sec:cumu}, nous présenterons des
 méthodes de résolution pour ce problème utilisant la programmation par
 contrainte. 
+
+\subsubsection{Limites et extensions des problèmes cumulatifs}
+
+Une des principales limitations du \CUSP~et du \RCPSP~est que, dans
+ces problèmes, chaque activité consomme une quantité de ressource
+fixe, connues à l'avance, durant toute sa durée d'exécution. De plus,
+cette durée est supposée fixe. Cependant, pour de nombreux problèmes
+pratiques, ces suppositions reviennent à sur-contraindre le
+problème. 
+
+Un exemple pouvant intervenir dans le milieu de la construction est
+décrit dans~\cite{FT}. Dans cette exemple, une activité représentant
+la peinture d'un bateau est considérée. Pour cette activité, la durée
+est remplacée par une quantité de travail représentant le travail de
+$3$ personnes sur une journée. Cette activité peut, au choix, être
+exécutée en $3$ jours par $1$ personne, ou en $2$ jours par $2$
+personnes le premier jour et $1$ personne le second, ou encore par $3$
+personnes en seulement un jour. Cet exemple peut facilement être
+généralisé à de nombreux cas pratiques.
+
+Un autre exemple venant d'un problème industriel est présenté
+dans~\cite{HaitArtiguesLopez}. Dans cet article, une application dans
+une fonderie où du métal est fondu dans des fournaises à induction est
+détaillé. La puissance de chaque fournaise utilisée pour faire fondre
+le métal peut être réglée, à tout moment, afin d'éviter un dépassement
+d'un certain niveau d'énergie (généralement dû à une limite suggérée
+par le fournisseur d'énergie). De ce fait, si chaque opération de
+fonte est vue comme une activité, nous avons besoin de pouvoir moduler
+la quantité d'énergie donnée à cette activité à chaque instant et la
+durée de l'activité dépend de cette quantité d'énergie. 
+
+La modélisation de ce problème à l'aide d'une ressource continue
+s'avère donc être un choix judicieux. En effet, de nombreux exemples
+de ressource continue existent. C'est la cas de l'électricité, des
+sources d'énergie hydrauliques, de l'essence ou encore de la mémoire
+d'un ordinateur.
