chap1 quasi finit(verif)

--- a/main_file.bib
+++ b/main_file.bib
@@ -222,6 +222,203 @@ abstract = "In deterministic sequencing and scheduling problems, jobs are to be 
   year={1998},
   publisher={Wiley}
 }
+@article{RDK,
+title = "A hybrid scatter search for the discrete time/resource trade-off problem in project scheduling ",
+journal = "European Journal of Operational Research ",
+volume = "193",
+number = "1",
+pages = "35 - 48",
+year = "2009",
+note = "",
+issn = "0377-2217",
+doi = "http://dx.doi.org/10.1016/j.ejor.2007.10.042",
+url = "http://www.sciencedirect.com/science/article/pii/S0377221707010661",
+author = "Mohammad Ranjbar and Bert De Reyck and Fereydoon Kianfar",
+keywords = "Project scheduling",
+keywords = "Heuristic",
+keywords = "Scatter search",
+keywords = "Path relinking",
+keywords = "Time/resource trade-offs "
+}
+
+@Article{BLN,
+author="Baptiste, Ph.
+and Le Pape, C.
+and Nuijten, W.",
+title="Satisfiability tests and time-bound adjustments for cumulative scheduling problems",
+journal="Annals of Operations Research",
+year="1999",
+volume="92",
+number="0",
+pages="305--333",
+issn="1572-9338",
+doi="10.1023/A:1018995000688",
+url="http://dx.doi.org/10.1023/A:1018995000688"
+}
+
+@book{Blaz,
+ author = { J. B{\l}a{\.z}ewicz and K. H. Ecker and E. Pesch and 
+G. Schmidt and J. W{\c e}glarz},
+ title = {Scheduling Computer and Manufacturing Processes},
+ year = {2001},
+ isbn = {3540419314},
+ edition = {2nd},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+} 
+
+@article{Verglas,
+ ISSN = {00251909, 15265501},
+ URL = {http://www.jstor.org/stable/2630892},
+ author = {Jan W{\c e}glarz},
+ journal = {Management Science},
+ number = {9},
+ pages = {1040-1053},
+ publisher = {INFORMS},
+ title = {Project Scheduling with Continuously-Divisible, Doubly Constrained Resources},
+ volume = {27},
+ year = {1981}
+}
+
+@Article{Wali,
+author="Walig{\'o}ra, Grzegorz",
+title="Heuristic approaches to discrete-continuous project scheduling problems to minimize the makespan",
+journal="Computational Optimization and Applications",
+year="2011",
+volume="48",
+number="2",
+pages="399--421",
+issn="1573-2894",
+doi="10.1007/s10589-010-9343-5",
+url="http://dx.doi.org/10.1007/s10589-010-9343-5"
+}
+
+
+
+@incollection{BP,
+  title={A continuous multi-resources cumulative constraint with positive-negative resource consumption-production},
+  author={Beldiceanu, Nicolas and Poder, Emmanuel},
+  booktitle={Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems},
+  pages={214--228},
+  year={2007},
+  publisher={Springer Berlin Heidelberg}
+}
+
+@Inbook{V09,
+author="Vil{\'i}m, Petr",
+chapter="Max Energy Filtering Algorithm for Discrete Cumulative Resources",
+title="Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 6th International Conference, CPAIOR 2009 Pittsburgh, PA, USA, May 27-31, 2009 Proceedings",
+year="2009",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="294--308",
+isbn="978-3-642-01929-6",
+doi="10.1007/978-3-642-01929-6_22",
+url="http://dx.doi.org/10.1007/978-3-642-01929-6_22"
+}
+
+@Article{Kis,
+author="Kis, Tam{\'a}s",
+title="A branch-and-cut algorithm for scheduling of projects with variable-intensity activities",
+journal="Mathematical Programming",
+year="2005",
+volume="103",
+number="3",
+pages="515--539",
+issn="1436-4646",
+doi="10.1007/s10107-004-0551-6",
+url="http://dx.doi.org/10.1007/s10107-004-0551-6"
+}
+
+
+@article{NK,
+title = "\{MIP\} models for resource-constrained project scheduling with flexible resource profiles ",
+journal = "European Journal of Operational Research ",
+volume = "239",
+number = "2",
+pages = "335 - 348",
+year = "2014",
+note = "",
+issn = "0377-2217",
+doi = "http://dx.doi.org/10.1016/j.ejor.2014.05.036",
+url = "http://www.sciencedirect.com/science/article/pii/S0377221714004597",
+author = "Anulark Naber and Rainer Kolisch",
+keywords = "Project scheduling",
+keywords = "Flexible profiles",
+keywords = "Principal resources",
+keywords = "Dependent resources",
+keywords = "Discrete-time models "
+}
+
+
+@article{PV,
+title = "A genetic algorithm for the preemptive and non-preemptive multi-mode resource-constrained project scheduling problem ",
+journal = "European Journal of Operational Research ",
+volume = "201",
+number = "2",
+pages = "409 - 418",
+year = "2010",
+note = "",
+issn = "0377-2217",
+doi = "http://dx.doi.org/10.1016/j.ejor.2009.03.034",
+url = "http://www.sciencedirect.com/science/article/pii/S037722170900191X",
+author = "Vincent Van Peteghem and Mario Vanhoucke",
+keywords = "Project scheduling",
+keywords = "Genetic algorithm",
+keywords = "Multi-mode RCPSP",
+keywords = "Preemption "
+}
+
+
+@Article{DD,
+author="Demeulemeester, Erik
+and De reyck, Bert
+and Herroelen, Willy",
+title="The discrete time/resource trade-off problem in project networks: a branch-and-bound approach",
+journal="IIE Transactions",
+year="2000",
+volume="32",
+number="11",
+pages="1059--1069",
+issn="1573-9724",
+doi="10.1023/A:1013785108131",
+url="http://dx.doi.org/10.1023/A:1013785108131"
+}
+
+
+
+@article{RK,
+title = "Solving the discrete time/resource trade-off problem in project scheduling with genetic algorithms ",
+journal = "Applied Mathematics and Computation ",
+volume = "191",
+number = "2",
+pages = "451 - 456",
+year = "2007",
+note = "",
+issn = "0096-3003",
+doi = "http://dx.doi.org/10.1016/j.amc.2007.02.109",
+url = "http://www.sciencedirect.com/science/article/pii/S0096300307002731",
+author = "Mohammad R. Ranjbar and Fereydoon Kianfar",
+keywords = "Project scheduling",
+keywords = "Time/resource trade-offs",
+keywords = "Genetic algorithm "
+}
+
+
+@article {DDH,
+author = {De Reyck, Bert and Demeulemeester, Erik and Herroelen, Willy},
+title = {Local search methods for the discrete time/resource trade-off problem in project networks},
+journal = {Naval Research Logistics (NRL)},
+volume = {45},
+number = {6},
+publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+issn = {1520-6750},
+url = {http://dx.doi.org/10.1002/(SICI)1520-6750(199809)45:6<553::AID-NAV2>3.0.CO;2-1},
+doi = {10.1002/(SICI)1520-6750(199809)45:6<553::AID-NAV2>3.0.CO;2-1},
+pages = {553--578},
+keywords = {project scheduling, time/resource trade-offs, local search, tabu search, branch-and-bound},
+year = {1998},
+}
 
 @article{CAVT_clique,
 title = "Project scheduling with resource constraints: A branch and bound approach",
