--- a/part3/PLNE.tex
+++ b/part3/PLNE.tex
@@ -7,10 +7,10 @@
 \cleardoublepage
 \begin{minipage}{0.95\linewidth}
 \part{Programmation linéaire en nombres entiers}
+\label{part:PLNE}
 \vspace{15mm} % l'espacement souhaité
 \parttoc 
 \end{minipage}
-
 
 \input{part3/RCPSP/PLNE_RCPSP.tex} 
 \input{part3/CECSP/PLNE_CECSP.tex}
