--- a/part1/conclusion.tex
+++ b/part1/conclusion.tex
@@ -1,2 +1,26 @@
 
 \section{Conclusion}
+
+Dans ce chapitre, nous avons d'abord introduit les principales
+caractéristiques des problèmes d'ordonnacment avant de nous intéresser
+en particulier aux problèmes cumulatifs. Nous avons ensuite présenté
+deux des principaux problèmes étudiés en ordonnancment sous
+contrainte de ressource. Les limitations de ces problèmes ont ensuite
+été démontré et une nouvelle modélisation de la consommation de
+ressource nous a permis de définir un nouveau problème: le
+\CECSP. 
+
+Dans un premier temps, nous avons comparé ce problème avec les
+problème existant dans la littérature, puis nous avons présenté un
+ensemble de propriété qui va nous permettre, dans la suite de ce
+manuscrit, de décrire des techniques pour sa résolution. La plupart de
+ces techniques sont adaptées de techniques existantes et peuvent être
+classées en deux catégories: 
+\begin{itemize}
+\item les techniques adaptées du \CUSP~et issues de la programmation
+par contraintes. Ces techniques seront détaillées dans la
+partie~\ref{part:PPC}.
+\item les techniques adaptées du \RCPSP~et issues de la programmation
+linéaire. Ces techniques seront détaillées dans la
+partie~\ref{part:PLNE}.
+\end{itemize}
