--- a/part1/ordo_nrj.tex
+++ b/part1/ordo_nrj.tex
@@ -1,8 +1,9 @@
 
 \section{L'ordonnancement sous contraintes énergétiques}
- La modélisation de ce problème repose sur le problème 
-d'ordonnancement continu à contraintes énergétiques~\cite{ArtiguesLopez}, le
-\CECSP. 
+ 
+La modélisation présentée dans cette section repose sur le problème
+d'ordonnancement continu à contraintes
+énergétiques~\cite{ArtiguesLopez}, le \CECSP.
 
 \subsubsection{Définition du problème}
 
@@ -52,7 +53,7 @@ cette activité telle que:
     \label{nulleConso_CECSP}
     \forall i \in \A,\ \forall t \not\in [st_i,et_i],\  b_i(t)=0 
   \end{equation}
-\item l'énergie requise doit être apportée à chaque activité,, i.e. 
+\item l'énergie requise doit être apportée à chaque activité, i.e. 
   \begin{equation}
     \forall i \in \A,\ \int_{st_i}^{et_i}f_i(b_i(t))dt=W_i \label{nrj_CECSP}
   \end{equation}
@@ -349,8 +350,8 @@ Considérons l'instance à $3$ activités du \CECSP~suivante:
 \item la fonction $f_2(b)$ est définie par l'expression suivante: 
 \[f_2(b)=\left\{
 \begin{array}{lll}
-2b+1 & & b \in [3,7/2]\\
-b+9/2 & & b \in [7/2,4]
+2b & & b \in [3,4]\\
+b+4 & & b \in [4,5]
 \end{array}
 \right.\]
 \end{itemize}
@@ -358,30 +359,30 @@ b+9/2 & & b \in [7/2,4]
 \centering
 \subcaptionbox{Fonction $f_2(b)$ \label{fonction_ex_CECSP}}[0.4\linewidth]{
 \begin{tikzpicture}
-[xscale=1.7,yscale=0.56]
+[xscale=1.65,yscale=0.56]
 \node (O) at (2,5) {};
-\draw[->] (2,5) -- (5,5);
+\draw[->] (2,5) -- (5.5,5);
 \draw[->] (2,5) -- (2,10);
 
-\path[draw] (3,7) -- (3.5,8) -- (4,9.5) ;
+\path[draw] (3,6) -- (4,8) -- (5,9) ;
 
 \draw[dotted] (3,5) node[below] {\footnotesize $3$} -- (3,10);
-\draw[dotted,color=gray!70] (3.5,5.2) node[below=-0.1pt,color=black] {\footnotesize $3.5$}
--- (3.5,10);
-\draw[dotted] (4,5) node[below] {\footnotesize $4$} -- (4,10);
+\draw[dotted,color=gray!70] (4,5) node[below,color=black] {\footnotesize $4$}
+-- (4,10);
+\draw[dotted] (5,5) node[below] {\footnotesize $5$} -- (5,10);
 
-\draw (2,7) node[left] {\footnotesize $7$};
+\draw (2,6) node[left] {\footnotesize $6$};
 \draw (2,8) node[left] {\footnotesize $8$};
-\draw (2,9.5) node[left] {\footnotesize $9.5$};
+\draw (2,9) node[left] {\footnotesize $9$};
 \end{tikzpicture}}
 \hfill
-\subcaptionbox{}[0.55\linewidth]{
+\subcaptionbox{Données de l'instance}[0.55\linewidth]{
   \begin{tabular}{|M{0.6cm}|M{0.6cm}M{0.6cm}M{0.6cm}M{0.6cm}M{0.6cm}M{1.2cm}|}
     \hline
     $i$ & $r_i$ & $d_i$ & $W_i$ & $\bmin$ & $\bmax$ & $f_i(b)$\\[2mm]
 \hline
     1 & 0 & 2 & 6 & 3 & 3 & $b$\\[2mm]
-    2 & 1 & 5 & 26 & 3 & 4 & fig.~\ref{fonction_ex_CECSP}\\[2mm]
+    2 & 1 & 5 & 22 & 3 & 4 & fig.~\ref{fonction_ex_CECSP}\\[2mm]
     3 & 0 & 6 & 39 & 1 & 5 & $3b$\\[2mm]
     \hline
     \multicolumn{7}{c}{}
@@ -394,7 +395,7 @@ La figure~\ref{sol_ex_CECSP} présente une solution réalisable pour le
 activité n'est, à priori, pas égale à la quantité de ressource
 consommée par cette dernière. En effet, regardons l'activité $2$. Sa
 consommation de ressource est égale à $3 + 4 * 2 = 11$ tandis que
-l'énergie qu'elle reçoit est $f_2(3)+ f_2(4) * 2 = 7 + 19/2 * 2 =26$.
+l'énergie qu'elle reçoit est $f_2(3)+ f_2(4) * 2 = 6 + 8 * 2 =22$.
 
 \begin{figure}[!htb]
 \centering
@@ -426,6 +427,154 @@ l'énergie qu'elle reçoit est $f_2(3)+ f_2(4) * 2 = 7 + 19/2 * 2 =26$.
 \label{sol_ex_CECSP}
 \end{figure}
 \end{ex}
+
+Le paragraphe suivant présente les différentes modélisations des
+activités non-rectangulaires présentes dans la littérature. 
+
+\subsubsection{Contexte}
+
+
+Dans un premier temps, nous nous intéressons aux extensions du
+\RCPSP. Une des extensions les plus célèbres est le problème
+d'ordonnancement de projet multimode (MRCPSP). Dans ce problème, un
+choix de différents modes est disponible pour chaque activité et une
+activité doit être exécutée selon un de ces modes. Un mode correspond
+à une combinaison formée d'un temps d'exécution constant et d'une
+consommation de ressource qui permet d'apporter à l'activité au moins
+la quantité d'énergie requise. Même si de nombreux problèmes basés sur
+ce concept de mode existent~\cite{DDH,RK,RDK,DD} et que des méthodes
+de résolution efficaces ont été mises en place pour résoudre le
+MRCPSP~\cite{PV}, cette modélisation peut amener à une mauvaise
+allocation de la ressource.
+
+Si nous reprenons l'exemple de la peinture d'un bateau,
+décrit au paragraphe~\ref{sec:limit_CUSP}, l'activité avait besoin de
+$3$ unités d'énergie pour s'exécuter. Dans le contexte du MRCPSP,
+seulement $3$ modes seraient décrits: $(3,1),\ (2,2)$ et $(1,3)$. Or,
+dans le second cas, on donne une unité de trop à l'activité et la
+possibilité d'allouer $2$ unités de ressource pendant une période de
+temps et $1$ unité pendant la seconde n'est pas représentée ici. 
+
+La principale limitation du MRCPSP est donc que les activités sont
+contraintes à être rectangulaire, i.e. consommation de ressource
+constante. 
+
+D'autres extensions du \RCPSP~existent. C'est le cas par exemple des
+problèmes d'ordonnancement de projet avec une ressource de type {\it
+  work-content}~\cite{FT} ou du problème d'ordonnancement de projet
+avec des profils de ressource flexibles (FRCPSP)~\cite{NK}. Dans ces
+problèmes, plusieurs types de ressources sont considérées: 
+\begin{itemize}
+\item principale (ou work-content dans~\cite{FT}): il s'agit de la
+  ressource via laquelle la quantité d'énergie requise est donnée à
+  l'activité. C'est elle qui sert à déterminer la durée de l'activité.
+\item les ressources dépendantes: l'utilisation de ces ressources
+  dépendent de l'utilisation de la ressource principale.
+\item les ressources indépendantes: la consommation de ces ressources
+  est indépendante des consommations des autres ressources mais ces
+  utilisations doivent être synchrone. 
+\end{itemize}
+Bien que plusieurs différences existent entre ces problèmes et le
+\CECSP - l'utilisation de plusieurs ressources, le temps discret
+pour~\cite{FT}... - les principales sont les suivantes: la longueur
+minimale des blocs et les fonctions de rendements. La première
+correspond au temps minimal qu'il faut attendre entre deux
+ré-allocations de la ressource, que les auteurs appellent longueur
+minimale de bloc, tandis que la seconde fait référence à la
+non-présence de fonction de rendement, similaire à celles présentes
+dans le cas du \CECSP. 
+
+Enfin, la dernière extension du \RCPSP~présentée est celle où les
+activités ont une intensité variable~\cite{Kis}. Ici, chaque activité
+requiert une certaine quantité d'énergie durant son exécution et, dans
+chaque période de temps, il est possible de donner une certaine partie
+de cette quantité à l'activité, proportionnelle à l'{\it intensité} à
+laquelle est exécutée l'activité. Dans ce cas, on peut introduire des
+fonctions de rendement mais ces fonctions seraient alors contraintes à
+être linéaire, i.e. $b \rightarrow a*b$. De plus, aucune borne
+inférieure sur le rendement d'une activité n'est considérée. 
+
+Dans le cadre du \CUSP, d'autre variantes ainsi que des algorithmes de
+filtrages dédiés ont été proposés. Parmi ceux-ci, on retrouve le cas
+des activités complètement/partiellement élastiques de Baptiste et
+al.~\cite{BLN}. Dans le premier cas, les activités ont une demande en
+énergie constante mais la quantité de ressource consommée par
+une activité à chaque instant (discret) peut varier entre $0$ et la
+capacité de la ressource. Dans le second cas, les mêmes conditions
+sont présentes mais les auteurs définissent des contraintes permettant
+de limiter les variations dans l'utilisation de la ressource. Aucun de
+ces deux problèmes ne considère de fonctions de rendement. 
+
+Dans~\cite{BP}, les auteurs définissent une activité comme une
+séquence de sous-activités trapézoïdales ayant des durées et hauteurs
+(consommations) variables. Enfin, Vil{\`i}m~\cite{V09} considère des
+activités pour lesquelles la durée et la hauteur sont définies par des
+intervalles. Pour ces deux problèmes, aucune demande en énergie n'est
+définie pour les activités. 
+
+Enfin, le \CECSP~ est aussi lié à d'autres problèmes à contraintes
+d'énergie avec ressources continues~\cite{Blaz,Wali}.
+Dans~\cite{Blaz}, plusieurs modèles représentant le temps d'exécution
+d'une activité en fonction de la ressource qui lui est allouée sont
+présentés. En particulier, les auteurs considèrent un problème où 
+un ensemble de processeurs identiques et parallèles jouent le rôle de
+la ressource. De plus, des fonctions représentant le temps d'exécution
+d'une activité en fonction du nombre de processeurs qui lui est
+allouée sont définies. Ce nombre de processeurs peut varier
+continuellement au cours du temps et donc ces fonctions sont
+équivalentes au fonctions de rendement définies dans le cadre du
+\CECSP. De plus, dans~\cite{Blaz,Wali}, l'énergie est calculée en
+intégrant une fonction de rendement sur tout l'horizon de temps.
+Cependant, aucune contrainte de rendement maximum et minimum n'est
+considérée dans ces problèmes.
+
+Le tableau~\ref{tab:dif_CECSP} récapitule les principales différences
+entre tous ces problèmes et le \CECSP. 
+
+
+\begin{table}[!htb]
+  \centering
+  \begin{tabular}{|c|cc>{\centering\arraybackslash} p{1.9cm}>{\centering\arraybackslash} p{1.5cm}>{\centering\arraybackslash} p{1.3cm}>{\centering\arraybackslash} p{1.2cm}>{\centering\arraybackslash} p{2.4cm}|}
+    \hline    
+    Problème & $\bmin$ & $\bmax$ & fonction de rend. ($f_i$) &
+                                                                   activités
+                                                                   non-rect.
+    & 
+                                                                 énergie
+                                                                   ($W_i$)
+    & res. cont. & autre différence \\
+\hline
+MRCPSP & X & X & X &    & X &  & \\
+\hline
+ FRCPSP & X & X &    & X & X & X & long. de bloc\\  
+\hline
+work-content & X & X & & X & X &  & long. de bloc\\  
+\hline
+intensité variable&  & X&  & X & X & & \\   
+\hline
+part. élastique & & & & X & X & &\\
+\hline
+compl. élastique & & & X & X & & &\\
+\hline
+Trapézoïdales act. & & & & X & & &\#trapèzes fixe\\
+\hline
+Intervalles repr.& X & X & & & & & achat d'énergie\\ 
+\hline
+Modèle proces. & &  & X& X& X& X& \\ 
+\hline
+Intervalles repr.&  & &X &X & X& X& res. discrète et cont.\\ 
+\hline
+  \end{tabular}
+  \caption{Principales différences entre les extensions des problèmes
+    cumulatifs et le \CECSP.}
+  \label{tab:dif_CECSP}
+\end{table}
+
+Le \CECSP~est donc un nouveau problème et ces différences avec les
+problèmes existants ne nous permettent pas d'appliquer directement des
+techniques déjà définies pour d'autres problèmes. Cependant, certaines
+techniques existantes peuvent être adaptées dans le cadre du
+\CECSP. Ces techniques seront présentées plus tard dans le manuscrit.
 
 Le paragraphe suivant présente des propriétés du \CECSP~qui seront 
 utilisées dans la suite de ce manuscrit. 
@@ -467,7 +616,7 @@ nous considérons le \CECSP~ sans fonction objectif.
 
 
 
- Pour le \CECSP, nous présentons un exemple d' une instance ne
+ Pour le \CECSP, nous présentons un exemple d'une instance ne
 comprenant que des données entières et ne possédant que des solutions
 non-entières. Ceci permet, en plus des arguments présentés pour le
 \RCPSP, de démontrer l'importance de l'amélioration des modèles à
