chap1:sec1-2 ok

--- a/part1/chap1.tex
+++ b/part1/chap1.tex
@@ -16,9 +16,9 @@ ressources (RCPSP) et le problème cumulatif (CuSP). Nous montrerons
 ensuite les limites de ces problèmes et nous introduirons une nouvelle 
 extension du CuSP, le problème d'ordonnacement continu à contraintes
 énergétiques (CECSP), pour pallier ces limites. Cette nouvelle
-extension sera ensuite comparée aux extensions existantes du \RCPSP~
-et du \CUSP.  Enfin, plusieurs propriétés du \CECSP, qui seront
-utilisées tout au long du manuscrit, seront présentées.
+extension sera ensuite comparée aux extensions existantes du \RCPSP~et
+du \CUSP.  Enfin, plusieurs propriétés du \CECSP, qui seront utilisées
+dans la suite de ce manuscrit, seront présentées.
 
 
 \input{part1/ordo.tex}
